--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "newserve",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "music-player",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start":"node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Ashutosh5333/newserve.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Ashutosh5333/newserve/issues"
-  },
-  "homepage": "https://github.com/Ashutosh5333/newserve#readme",
   "dependencies": {
-    "cors": "^2.8.5",
-    "json-server": "^0.17.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
   }
 }
